fix gap between about me and header

--- a/style.css
+++ b/style.css
@@ -396,11 +396,15 @@ nav .fa-solid {
 /* ---------------CSS For Small Screen------------------ */
 
 @media only screen and (max-device-width: 600px){
+    #header{
+        height: 100%;
+    }
     .header-text{
-        margin-top: 70%;
+        margin-top: 20%;
         font-size: 18px;
     }
     .header-text h1{
+        margin-top: 1px;
         font-size: 30px;
     }
     .header-text p span{
@@ -440,6 +444,7 @@ nav .fa-solid {
     }
     #about{
         margin: 0 20px;
+        padding: 40px 0;
     }
     .about-col-1, .about-col-2{
         flex-basis: 100%;
